force-app/main/default/objects/Job_Application_Task__mdt/fields/Task_Due_Days__c.field-meta.xml
<CustomField>
    <fullName>Task_Due_Days__c</fullName>
    <description>number of days until Task.ActivityDate (Due Date)</description>
    <label>Task Due Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>