force-app/main/default/objects/Job_Application_Task__mdt/fields/Task_Priority__c.field-meta.xml
<CustomField>
    <fullName>Task_Priority__c</fullName>
    <description>reflects the Task.Priority picklist</description>
    <label>Task Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
                <default>true</default>
                <label>High</label>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>