force-app/main/default/objects/Job_Application_Task__mdt/fields/Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Task_Subject__c</fullName>
    <description>reflects the Task.Subject API name</description>
    <label>Task Subject</label>
    <length>200</length>
    <type>Text</type>
</CustomField>